# material-editor-module

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
assets/: scene.json
binaries/macos/: material_editor_app
binaries/macos/assets/: scene.json
binaries/macos/assets/shaders/: default_sprite.toml
binaries/material_editor_macos/: README.md  platform_native
binaries/material_editor_macos/assets/: scene.json
binaries/material_editor_macos/modules/: libmaterial_editor_module.dylib
binaries/material_editor_win64/: README.md
gui/: Cargo.toml
gui/src/: main.rs
material_editor_gui/: Cargo.toml  README.md
material_editor_gui/src/: main.rs
src/: asset_loading.rs  lib.rs
temp/: settings.json
